# subterranean

./: Cargo.toml  README.md  game_data.toml  memo.org
resources/: default_game_config.toml  event_map1.toml  game_data.toml  hana.json  hana.tsx  map1.tmx  map_chip1.tsx  map_chip1.xcf  sample.tmx  scenario_parsing_test.toml  scenario_table.toml  test.json  test.tmx  test.tsx  test1.json  test2.json  test2.tsx  test3.tsx  text_back.xcf
resources/game_xcf/: book_dot.xcf  chobo.xcf  paper3.xcf  イロハ_イ.xcf  イロハ_ニ.xcf  イロハ_ハ.xcf  イロハ_ホ.xcf  イロハ_ロ.xcf
resources/maps/suzunaan/: jutaku.tsx  jutaku2.tsx  suzuna1.tmx  untitled.tmx  wolf_editor_mapchip.tsx  wolf_editor_mapchips.tsx
resources/maps/suzunaan2/: main.tmx  wafu2.tsx
resources/other_config/: new_book_schedule.toml  shop_clock.toml
resources/scenario/: day_7_23.toml  day_7_24.toml  day_7_25.toml  day_7_28.toml  day_7_29.toml  day_7_30.toml  day_8_1.toml  day_8_2.toml  day_8_5.toml  default.toml  no_enough_money.toml  opening_episode.txt
resources/scenario/7_23/: 1.txt
resources/scenario/7_24/: 1.txt
resources/scenario/general/: no_enough_money.txt
resources/title_contents/: config_panel.toml  hard_menu.toml  init_menu.toml  new_game_menu.toml  title_contents_list.toml
src/: core.rs  lib.rs  main.rs  object.rs  scene.rs
src/core/: book_management.rs  game_system.rs  map_parser.rs  mod.rs  util.rs
src/object/: character_factory.rs  collision.rs  copy_scene_object.rs  effect.rs  effect_object.rs  end_object.rs  map_object.rs  mod.rs  move_fn.rs  notify.rs  save_scene_object.rs  scenario.rs  scenario_object.rs  shop_object.rs  simulation_ui.rs  task_object.rs  task_result_object.rs  title_object.rs  util_object.rs
src/object/task_object/: factory.rs  task_table_elements.rs  tt_main_component.rs  tt_menu_component.rs  tt_sub_component.rs
src/scene/: dream_scene.rs  end_scene.rs  lib.rs  mod.rs  save_scene.rs  scenario_scene.rs  shop_scene.rs  suzuna_scene.rs  task_scene.rs  title_scene.rs  work_scene.rs
src/scene/suzuna_scene/: suzuna_sub_scene.rs
src/scene/suzuna_scene/suzuna_sub_scene/: copy_scene.rs  task_result_scene.rs  task_scene.rs
src/scene/work_scene/: work_scene_sub.rs
tests/: scenario.rs  scenario_parsing_test.toml
