[package]
name = "suzu"
version = "0.1.0"
authors = ["Akihiro Takai <at.sisy@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ggez = "0.5.1"
mint = "0.5.5"
toml = "0.5.6"
collision = "0.20.1"
serde = { version = "1.0.106", features = ["derive"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
cgmath = "0.17.0"
rand = "0.7.2"
num = "*"
number_to_jk = { git = "https://github.com/atsisy/number_to_jk.git" }
tiled = "0.9.3"
#torifune = { git = "https://github.com/atsisy/torifune.git" }
torifune = { path = "../torifune" }
pathfinding = "2.0.4"

[profile.dev]
opt-level = 3
