[package]
name = "suzu"
version = "0.1.0"
authors = ["Akihiro Takai <at.sisy@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ggez = { git = "https://github.com/ggez/ggez.git", branch = "devel" }
mint = "0.5.5"
toml = "0.5.6"
collision = "0.20.1"
serde = { version = "1.0.106", features = ["derive"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
cgmath = "0.17.0"
rand = "0.7.2"
num = "*"
number_to_jk = { git = "https://github.com/atsisy/number_to_jk.git", rev = "4ec4ea23f0fd807b97e192f7ce03c94b2d450ef2" }
tiled = "0.9.3"
#torifune = { git = "https://github.com/atsisy/torifune.git" }
torifune = { path = "../torifune" }
pathfinding = "2.0.4"
base64 = "0.13.0"
rust-crypto = "0.2.36"
aes-stream = "0.2.1"
reqwest = { version = "0.11", features = ["blocking", "json"] }	
chrono = "0.4.19"

[profile.dev]
opt-level = 3